<resources>
    <string name="app_name">App Health</string>
    <string name="service_name">App Health</string>
    <string name="choose_app">Choose Apps</string>
    <string name="preferences">Preferences</string>
    <string name="settings">Settings</string>
    <string name="health">Health</string>
    <string name="watch_settings">Watch Settings</string>
    <string name="run_as_service">Run as a service</string>
    <string name="run_as_service_summary">Run this application as a service without keeping the app open</string>
    <string name="remote_mac_address">Remote MAC address</string>
    <string name="remote_mac_address_default">00:00:00:00:00:00</string>
    <string name="notification_access">Notification access</string>
    <string name="notification_access_summary">Grant access to status notifications</string>
    <string name="mac_format_error">Format must be A1:BB:3C:44:DE:9F</string>
    <string name="stop_service">Stopping service</string>
    <string name="start_service">Starting service</string>
    <string name="start_at_boot">Start at boot</string>
    <string name="notify_disconnect">Notify on disconnect</string>
    <string name="lock_phone">Lock phone on Find</string>
    <string name="not_disconnect">Show notification when the device looses connection</string>
    <string name="start_service_at_boot">Enable to automatically start the service after the operating system boots up</string>
    <string name="channel_desc">Connection status notifications</string>
    <string name="flip_vertically">Flip display vertically</string>
    <string name="flip_vertically_summary">Enable to flip the display vertically</string>
    <string name="sync_watch">Syncing watch data</string>
    <string name="unable_sync">Unable to sync data</string>
    <string name="find_watch">Finding watch</string>
    <string name="not_connect">Watch not connected</string>
    <string name="grant_notification">Looks like you must first grant this app to access notifications. Do you want to continue?</string>
    <string name="test_notification">Notification Test</string>
    <string name="test_notification_desc">Send a test notification to the watch. Select an icon that will be displayed with the text</string>
    <string name="send">Send</string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
    <string name="not_enable">Not enabled</string>
    <string name="mac_addr">Mac Address</string>
    <string name="later">Later</string>
    <string name="setup_now">Setup Now</string>
    <string name="setup_desc">Setup watch mac address in settings</string>
    <string name="hrm">Heart Rate</string>
    <string name="bph">Blood Pressure</string>
    <string name="sp02">O2 Level</string>
    <string name="user">User</string>
    <string name="reminder">Reminders</string>
    <string name="find_w">Find Watch</string>
    <string name="test">Test</string>
    <string name="custom_alarm">Custom Alarm</string>
    <string name="camera">Camera</string>
    <string name="watch_type">Watch type:</string>
    <string name="enable_lock">Enable the app to lock the phone</string>
    <string name="hr12_sys">12 hour system</string>
    <string name="hourly">Hourly measure</string>
    <string name="metric">Metric units</string>
    <string name="imperial">Imperial units</string>
    <string name="quiet">Quiet Hours</string>
    <string name="alarms">Alarms</string>
    <string name="alarm">Alarm</string>
    <string name="sedentary">Sedentary</string>
    <string name="age">Age</string>
    <string name="step_len">Step Length</string>
    <string name="height">Height</string>
    <string name="weight">Weight</string>
    <string name="target">Target Steps</string>
    <string name="sleep">Sleep Time</string>
    <string name="connect_set">Connect watch to set a one time alarm</string>
    <string name="years">years</string>
    <string name="kcal">kcal</string>
    <string name="distance">distance</string>
    <string name="cm">cm</string>
    <string name="kg">kg</string>
    <string name="km">km</string>
    <string name="miles">miles</string>
    <string name="loading">Loading…</string>
    <string name="steps">steps</string>
    <string name="mmHg">mmHg</string>
    <string name="bpm">bpm</string>
    <string name="start_measure">Tap to start measurement</string>
    <string name="stop_measure">Tap to stop measurement</string>
    <string name="customization">Customization</string>
    <string name="error_log">Error Log</string>
    <string name="icon_set">Icon set</string>
    <string name="colored">Colorize icons</string>
    <string name="priority">Notification priority</string>
    <string name="capitalize">Capitalize watch notifications</string>
    <string name="share">Share</string>
    <string name="delete">Delete</string>
    <string name="unable_load">Unable to load error file</string>
    <string name="no_errors">No errors to show</string>
    <string name="log_deleted">Log file deleted</string>
    <string name="nothing">Nothing to delete</string>
    <string name="not_list">Notification list</string>
    <string name="load_apps">Loading your apps</string>
    <string name="scan">Scanning…</string>
    <string name="connecting">Connecting to</string>
    <string name="connected">Connected to</string>
    <string name="loss_link">Lost link to</string>
    <string name="disconnecting">Disconnecting from</string>
    <string name="disconnected">Disconnected from</string>
    <string name="battery">Battery</string>
    <string name="choose_apps">Tap to select apps</string>
    <string name="bt_settings">BT Settings</string>
    <string name="not_paired">Device not on the list? Pair in the phones Bluetooth settings first</string>
    <string name="turn_on_bt">Please turn on Bluetooth</string>
    <string name="add_contact">Add contact</string>
    <string name="contacts">Contacts</string>
    <string name="sync">Synchronize</string>
    <string name="frequent">Frequent contacts</string>
    <string name="info_once">Tap once to select an SOS contact\nLong press to remove a contact\nClick the sync button above to upload contacts</string>
    <string name="once">Once</string>
    <string name="everyday">Everyday</string>
    <string name="mon_fri">Mon - Fri</string>
    <string name="sun">Sun</string>
    <string name="mon">Mon</string>
    <string name="tue">Tue</string>
    <string name="wed">Wed</string>
    <string name="thur">Thur</string>
    <string name="fri">Fri</string>
    <string name="sat">Sat</string>
    <string name="su">S</string>
    <string name="mo">M</string>
    <string name="tu">T</string>
    <string name="we">W</string>
    <string name="th">T</string>
    <string name="fr">F</string>
    <string name="sa">S</string>
    <string-array name="alarm_options">
        <item>Once</item>
        <item>Everyday</item>
        <item>Mon - Fri</item>
        <item>Custom Alarm</item>
    </string-array>
    <string-array name="sedentaryInterval">
        <item>45 mins</item>
        <item>1 hour</item>
    </string-array>
    <string name="units">" Metric units"</string>
    <string name="service_stopped">Service stopped when changing preferences. Go back to the main screen to restart the service automatically.</string>
    <string name="filter_info">Press enter to add another filter. Long press item to delete</string>
    <string name="optimize_app">Optimize app</string>
    <string name="bat_notifs">Battery Notifications</string>
    <string name="notifications">Notifications</string>
    <string name="battery_icon">Battery icon</string>
    <string name="find_phone">Find Phone</string>
    <string name="plugged">Plugged in</string>
    <string name="unplugged">Unplugged</string>
    <string name="self_test">Self Test</string>
    <string name="self_test_notif">Self test notification</string>
    <string name="reset_watch">Reset watch</string>
    <string name="raise_wake">Raise to wake</string>
    <string name="yes">Yes</string>
    <string name="reset_info">This will reset all watch data. Are you sure?</string>
    <string name="bat_charging">[_______Charging________]</string>
    <string name="bat_unplugged">[_______Unplugged_______]</string>
    <string name="bat_phone">[_____Phone battery_____]</string>
    <string name="phone_bat">Phone battery:</string>
    <string name="self_test_ok">Self Test OK</string>
    <string name="quiet_active">[__Quiet Hours Active___]</string>
    <string name="custom_watchface">Custom Watchface</string>
    <string name="upload_image">Uploading Image</string>
    <string name="select_image">Select Image</string>
    <string name="image_cropped">Image Cropped</string>
    <string name="create_upload">Creating upload files</string>
    <string name="send_data">Sending Data</string>
    <string name="transfer_complete">Transfer complete</string>
    <string name="notify_off">Off</string>
    <string name="notify_only">Notify Only</string>
    <string name="notify_ring">Notify &amp; Ring</string>
    <string name="watch_lang">Watch Language</string>
    <string name="upload">Upload Image</string>
    <string name="self_test_fail">Self Test Failed</string>
    <string name="week">Week</string>
    <string name="month">Month</string>
    <string name="january">January</string>
    <string name="february">February</string>
    <string name="march">March</string>
    <string name="april">April</string>
    <string name="may">May</string>
    <string name="june">June</string>
    <string name="july">July</string>
    <string name="august">August</string>
    <string name="september">September</string>
    <string name="october">October</string>
    <string name="november">November</string>
    <string name="december">December</string>
    <string name="sunday">Sunday</string>
    <string name="monday">Monday</string>
    <string name="tuesday">Tuesday</string>
    <string name="wednesday">Wednesday</string>
    <string name="thursday">Thursday</string>
    <string name="friday">Friday</string>
    <string name="saturday">Saturday</string>
    <string name="daily">Daily</string>
    <string name="weekly">Weekly</string>
    <string name="monthly">Monthly</string>
    <string name="re_enable">Do you want to re-enable notification access?</string>
    <string name="copied">Copied to clipboard</string>
    <string name="watch_info">Watch Info</string>
    <string name="version">Version</string>
    <string name="type">Type</string>
    <string name="copy_id">Copy ID</string>
    <string name="convert_greek">Convert Greek font</string>
    <string name="no_data">No Data</string>
    <string name="today">Today</string>
    <string name="steps_history">Steps History</string>
    <string name="sleep_history">Sleep History</string>
    <string name="deep_sleep">Deep</string>
    <string name="light_sleep">Light</string>
    <string name="total_sleep">Total</string>
    <string name="flip_disp">Flip Display</string>
    <string name="rotate_disp">Rotate Display</string>
    <string name="screen_off">Turn off screen</string>
    <string name="timeout">Notification Timeout</string>
    <string name="ignore_optimize">Ignore Optimization</string>
    <string name="request_optimize">Request to ignore battery optimizations</string>
    <string name="never_ask">Never ask</string>
    <string name="theme">Theme</string>
    <string name="accent">Accent</string>
    <string name="choose_theme">Choose your preferred accent color and theme</string>
    <string name="clear_data">Clear Data</string>
    <string name="clear_data_info">This will remove all error log data. Are you sure?</string>
    <string name="sleep_txt">Sleep</string>
    <string name="not_rooted">Device not rooted</string>
    <string name="dnd_mode">Do not Disturb mode</string>
    <string name="dnd_text">Do not disturb</string>
    <string name="ext_camera">Ext. Camera</string>
    <string name="screen_on">Screen On</string>
</resources>