<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".fragment.ExploreFragment">
    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:background="@color/primaryColor"
        android:contentInsetStart="0dp"
        android:contentInsetLeft="0dp"
        android:contentInsetEnd="0dp"
        android:contentInsetRight="0dp"
        app:navigationIcon="?attr/homeAsUpIndicator"
        android:elevation="0dp"
        app:contentInsetEnd="0dp"
        app:contentInsetLeft="0dp"
        app:contentInsetRight="0dp"
        app:contentInsetStart="0dp"
        app:layout_collapseMode="parallax"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"

        app:popupTheme="@style/ThemeOverlay.AppCompat.Light"/>

    <androidx.core.widget.NestedScrollView
        android:id="@+id/nestedScrollView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar">


        <LinearLayout
            android:id="@+id/linearLayout4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical"
            android:weightSum="3"
            app:layout_constraintBottom_toTopOf="@+id/nestedScrollView"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/toolbar">

            <androidx.cardview.widget.CardView
                android:id="@+id/findWatch"
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:layout_marginStart="5dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="5dp"
                android:layout_marginBottom="5dp"
                android:layout_weight="0.9"

                app:cardBackgroundColor="@color/colorCardBackground"
                app:cardCornerRadius="15dp"
                app:cardElevation="2dp"
                app:cardUseCompatPadding="true">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="center_vertical"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/textView3"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:text="@string/find_w"
                        android:textColor="@android:color/black"
                        android:textSize="14sp"
                        app:layout_constraintBottom_toBottomOf="@+id/imageView2"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toEndOf="@+id/imageView2"
                        app:layout_constraintTop_toTopOf="@+id/imageView2" />

                    <ImageView
                        android:id="@+id/imageView2"
                        android:layout_width="45dp"
                        android:layout_height="45dp"
                        android:layout_margin="5dp"
                        android:layout_marginStart="16dp"
                        android:scaleType="centerInside"
                        android:src="@drawable/ic_find"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        app:tint="@android:color/holo_orange_light" />

                    <ImageView
                        android:id="@+id/imageView3"
                        android:layout_width="150dp"
                        android:layout_height="150dp"
                        android:alpha="0.04"
                        android:src="@drawable/smart_watch"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="@+id/textView3"
                        app:layout_constraintHorizontal_bias="0.0"
                        app:layout_constraintStart_toStartOf="@+id/guideline5"
                        app:layout_constraintTop_toTopOf="parent" />

                    <androidx.constraintlayout.widget.Guideline
                        android:id="@+id/guideline5"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        app:layout_constraintGuide_percent="0.65" />
                </androidx.constraintlayout.widget.ConstraintLayout>

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/testNotify"
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:layout_marginStart="5dp"
                android:layout_marginTop="5dp"
                android:layout_marginEnd="5dp"
                android:layout_marginBottom="5dp"
                android:layout_weight="0.9"

                app:cardBackgroundColor="@color/colorCardBackground"
                app:cardCornerRadius="15dp"
                app:cardElevation="2dp"
                app:cardUseCompatPadding="true">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"

                    >

                    <TextView
                        android:id="@+id/textView4"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:text="@string/test"
                        android:textColor="@android:color/black"
                        android:textSize="14sp"
                        app:layout_constraintBottom_toBottomOf="@+id/imageView4"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toEndOf="@+id/imageView4"
                        app:layout_constraintTop_toTopOf="@+id/imageView4" />

                    <ImageView
                        android:id="@+id/imageView4"
                        android:layout_width="45dp"
                        android:layout_height="45dp"
                        android:layout_margin="5dp"
                        android:layout_marginBottom="51dp"
                        android:scaleType="centerInside"
                        android:src="@drawable/ic_send"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        app:tint="@android:color/holo_red_light" />
                </androidx.constraintlayout.widget.ConstraintLayout>

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/shakeCamera"
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:layout_gravity="center_vertical"
                android:layout_marginStart="5dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="5dp"
                android:layout_marginBottom="5dp"
                android:layout_weight="0.9"

                app:cardBackgroundColor="@color/colorCardBackground"
                app:cardCornerRadius="15dp"
                app:cardElevation="2dp"
                app:cardUseCompatPadding="true">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <TextView
                        android:id="@+id/cameraText"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:text="@string/camera"
                        android:textColor="@android:color/black"
                        android:textSize="14sp"
                        app:layout_constraintBottom_toBottomOf="@+id/cameraIcon"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toEndOf="@+id/cameraIcon"
                        app:layout_constraintTop_toTopOf="@+id/cameraIcon" />

                    <ImageView
                        android:id="@+id/cameraIcon"
                        android:layout_width="45dp"
                        android:layout_height="45dp"
                        android:layout_margin="5dp"
                        android:scaleType="centerInside"
                        android:src="@drawable/ic_camera"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        app:tint="@android:color/holo_purple" />

                    <ImageView
                        android:id="@+id/imageView5"
                        android:layout_width="0dp"
                        android:layout_height="0dp"
                        android:alpha="0.04"
                        android:backgroundTint="@android:color/darker_gray"
                        android:rotation="-19"
                        android:src="@drawable/camera_focus"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="@+id/guideline6"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintVertical_bias="0.17000002" />

                    <androidx.constraintlayout.widget.Guideline
                        android:id="@+id/guideline6"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        app:layout_constraintGuide_percent="0.65" />
                </androidx.constraintlayout.widget.ConstraintLayout>

            </androidx.cardview.widget.CardView>


        </LinearLayout>
    </androidx.core.widget.NestedScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>